# RMan-Project-2021-22

./: README.md
.github/workflows/: ci_python.yaml
julia/: .gitignore  Dockerfile  main.jl
julia/dhc/: table.jl
python/: .gitignore  Dockerfile  __init__.py  main.py  requirements.txt  setup.cfg  teste.ipynb
python/dhc/: __init__.py  table.py
python/kinematic/: __init__.py  dkin.py
python/profiler/: generate_robot_and_dkin.prof  kinematic_profile.py
python/reports/: kinematic_model.ipynb
python/reports/kinematic/: first_question.ipynb
python/rman/kinematics/: differential.py  direct.py
python/src/rman/dhc/: __init__.py  kinematic.py
python/src/rman/kinematics/: differential.py  direct.py
python/test/: test_kinematic.py
python/tests/: __init__.py  test_kinematic.py
